--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ dependencies = [
   "urllib3 >=1.26.0,<3",
   "websocket-client >=1.2.1,<2",
   "brotli >=1.1.0,<2",
+  "playwright >=1.46.0,<2",
 ]
 
 [project.urls]
