--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dependencies = [
   "typing-extensions >=4.0.0",
   "urllib3 >=1.26.0,<3",
   "websocket-client >=1.2.1,<2",
+  "brotli >=1.1.0,<2",
 ]
 
 [project.urls]
